production/frontend/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend
  namespace: production
spec:
  host: frontend
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
